# mission-debrief-ai

./: .env.example  .gitignore  .railwayrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: __init__.py  main.py
backend/api/: models.py  routes.py
backend/core/: anomaly.py  debrief.py  export.py  ingestion.py  vision.py
backend/demo/: __init__.py  solar_drone.py
backend/demo/sample_data/: solar_mission.json
docs/: architecture.md  demo-guide.md  sample_events.json  sample_telemetry_dji.csv
frontend/: app.js  index.html  motion.js  style.css
