[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mission-debrief-ai"
version = "0.1.0"
description = "Edge AI Recorder + Auto-Debrief — Multi-stream mission data to structured report in under 60 seconds"
authors = [
    { name = "VisionWave AI", email = "admin@traidefi.ai" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "drone", "uav", "mission-debrief", "telemetry", "vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/dudiollech-max/mission-debrief-ai"
Repository = "https://github.com/dudiollech-max/mission-debrief-ai"
Issues = "https://github.com/dudiollech-max/mission-debrief-ai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
